drone-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: drone
spec:
  type: NodePort
  selector:
    app: drone
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080  # Accessible at http://<NODE_IP>:30080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone
  namespace: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone
  template:
    metadata:
      labels:
        app: drone
    spec:
      containers:
        - name: drone
          image: drone/drone:2
          ports:
            - containerPort: 80
