service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-tasks-service
  labels:
    app: flask-tasks-app
spec:
  type: NodePort
  selector:
    app: flask-tasks-app
  ports:
    - name: metrics          # 🔹 IMPORTANT: name must match ServiceMonitor
      protocol: TCP
      port: 5000             # Cluster port
      targetPort: 5000       # Container port
      nodePort: 30001        # External access (NodePort)
